--- a/Front-End/index.css
+++ b/Front-End/index.css
@@ -2,3 +2,37 @@ html, body{
     margin: 0;
     padding: 0;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
+
+.menuBar{
+    display: flex;
+    background-color: #13293D;
+    padding: 10px 30px;
+}
+
+.topBar{
+    justify-content: space-between;
+}
+
+.bottomBar{
+    justify-content: space-around;
+
+}
+
+h1 {
+    color: #006494;
+    
+}
+
+h1:hover{
+    color: #FA8334;
+    cursor: pointer;
+}
