--- a/index.css
+++ b/index.css
@@ -1,95 +1,22 @@
-
 html, body{
     margin: 0;
     padding: 0;
-}
-
-.swipePage{
-    
-}
-
-.profilPage{
-    
-}
-
-.messagePage{
-
-}
-
-.iframe{
-    position: fixed;
-    top: 8%;
-}
-
-
-.container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-color: #13293D;
 }
 
-.menuBar{
-    display: flex;
-    background-color: #13293D;
+iframe{
     width: 100%;
-    
+    height: 100vh;
 }
 
-.topBar{
-    position: fixed;
-    top: 0px;
-    height: 8%;
-    justify-content: space-between;
+.loading{
+    display: flex;
 }
 
-.bottomBar{
-    position: fixed;
-    height: 10%;
-    bottom: 0px;
-    justify-content: space-around;
-    align-content: center;
-
+h1{
+    margin: 100% auto;
+    font-family: "Oswald", sans-serif;
+    font-weight: 700;
+    font-size: 60px;
+    color: #E8F1F2;
 }
-
-
-
-
-
-
-
-.topIcons{
-    width: 45px;
-    height: 45px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-
-
-
-
-
-svg {
-    padding: 10px;
-    width: 65px;
-    height: 65px;
-    fill: #006494;
-    align-self: center;
-    transition: scale 0.5s, fill 0.5s;
-}
-
-.selectedButton{
-    fill: #F76F15;
-    cursor: pointer;
-    scale: 1.3;
-}
-
-
-
-
-
-
-
