--- a/app/swipe/swipePage.css
+++ b/app/swipe/swipePage.css
@@ -37,7 +37,6 @@ html, body{
 
 }
 
-
 .topIcons{
     width: 45px;
     height: 45px;
@@ -59,6 +58,14 @@ img{
     top: 0;
     right: 0;
     width: 22%;
+    height: 100vh;
+}
+
+.swipeZone{
+    position: absolute;
+    top: 0;
+    left: 22%;
+    width: 56%;
     height: 100vh;
 }
 
